<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Champions</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="play">Play</string>
    <string name="title_activity_duel">Duel</string>
    <string name="commit">Commit</string>
    <string name="player_name">You</string>
    <string name="desc">Warning Avoidance</string>
    <string name="starting_health">20</string>
    <string name="enemy_name">Enemy</string>

    <color name="black">#000000</color>

    <string name="title_activity_hero_select">Select a Hero</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="previousTut">Back</string>
    <string name="nextTut">Next</string>

</resources>
